@@ -4,6 +4,7 @@ CHANGELOG
 | VERSION: 0.6.0RC3     |
 +-----------------------+
 BUGFIXES
+09-05-06    Authentication and authorisation improved
 07-05-06    Improved regex for detecting PHP CGI installs, php_sapi_name also
             returns apache2filter for CGI installs which is now detected (Mehdi Radgohar)
 05-05-06    Added missing en.js file that caused TinyFCK to fail on some platforms
